--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,9 +4,9 @@ spring:
       ddl-auto: none
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   datasource:
-    url: ${DB_URL:"jdbc:postgresql://localhost:5431/postgres"}
-    username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORT:root}
+    url: "jdbc:postgresql://localhost:5431/postgres"
+    username: root
+    password: root
   rabbitmq:
     host: localhost
     port: 15672
